--- a/note2.tex
+++ b/note2.tex
@@ -7,6 +7,18 @@
 \maketitle
 \tableofcontents
 \section{Convert}
+\subsection{Change format}
+This is too simple, and you can just execute:\vspace{5mm}
+
+{\centering\fbox{convert \textit{source} \textit{target}}\par}\vspace{5mm}
+
+and convert will change format of image by it's suffix.
+
+But it is not good at to convert bitmap to vector, if you want to do it, you should have potrace installed and you can convert the source image to bmp, bpm, or pbm, and then type:\vspace{5mm}
+
+{\centering\fbox{potrace \textit{source} -s -o \textit{target}}\par}\vspace{5mm}
+
+'-s' option is for svg format, there are some other options for other vector formats, but unfortunately, potrace can only convert graphics with gray scale.
 \subsection{Cut}
 {\centering\fbox{convert \textit{source} -crop $w$x$h$ \textit{target}}\par}\vspace{5mm}
 
